Updated Images in pass.html

--- a/pass.html
+++ b/pass.html
@@ -32,7 +32,43 @@
             alert("access denied");
         }
     }
+
+    var usingimage = 1;
+function newImage(){
+    
+    switch(usingimage){
+        case 1:
+        document.getElementById("anima").src =  "Wolf.jpg" 
+        usingimage = 2;
+        break;
+
+        case 2:
+        document.getElementById("anima").src = "Horse.jpg"
+        usingimage = 3;
+        break;
+
+        case 3:
+        document.getElementById("anima").src = "Deer.jpg"
+        usingimage = 1;
+        break;
+
+        default:
+        document.getElementById("anima").src =  "Wolf.jpg" 
+        usingimage = 1;
+        break;
+
+
+    }
+}
 </script>
+
+<p id="result">results </p>
+<div>
+    <img id = "anima" src="Wolf.jpg" onclick="newImage()" alt="Legendary Wolf" width="200" height="200" ><br>
+    <!-- <input type="button" onclick="newImage()" class="btn btn-primary btn-md" value="click"> -->
+</div>
+</div>
+
 
 <p id="result">Attempts display here </p>
 
